Make most of the Plone stuff visible in the theme.

--- a/deploy.ini
+++ b/deploy.ini
@@ -20,10 +20,8 @@ pipeline = egg:Paste#cgitb
 
 [filter:theme.default]
 use = egg:dv.xdvserver#xdv
-#theme = %(here)s/theme/templates/plone.html
-#rules = %(here)s/theme/rules/plone.xml
-theme = %(here)s/theme/templates/maurits.html
-rules = %(here)s/theme/rules/maurits.xml
+theme = %(here)s/theme/templates/plone.html
+rules = %(here)s/theme/rules/plone.xml
 notheme =
     /emptypage
 
