Move some stuff around from plone to theme. Note that we only have portlets on the right on some pages, like weblog, and never on the left, at least currently.

--- a/deploy.ini
+++ b/deploy.ini
@@ -24,6 +24,8 @@ theme = %(here)s/theme/templates/plone.html
 rules = %(here)s/theme/rules/plone.xml
 notheme =
     /emptypage
+# Recompile on each request:
+live = true
 
 [app:zope.proxy]
 use = egg:Paste#proxy
