Start using the 960 grid system

--- a/deploy.ini
+++ b/deploy.ini
@@ -20,6 +20,7 @@ pipeline = egg:Paste#cgitb
 
 [filter:theme.default]
 use = egg:dv.xdvserver#xdv
+absolute_prefix = http://127.0.0.1:5000
 theme = %(here)s/theme/templates/plone.html
 rules = %(here)s/theme/rules/plone.xml
 notheme =
