--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,10 @@
 [buildout]
+extensions = buildout_versions
+versions = versions
 parts =
     pasteserver
-    mywsgiapp
+#    mywsgiapp
+develop = src/mauritsresources
 
 
 [pasteserver]
@@ -9,6 +12,7 @@ recipe = zc.recipe.egg
 eggs =
     PasteScript
     dv.xdvserver
+    mauritsresources
 
 
 [mywsgiapp]
@@ -17,3 +21,19 @@ eggs =
 recipe = collective.recipe.modwsgi
 eggs = dv.xdvserver
 config-file = ${buildout:directory}/deploy.ini
+
+
+[versions]
+Paste = 1.7.5.1
+PasteDeploy = 1.3.4
+PasteScript = 1.7.3
+WebOb = 1.0.1
+buildout-versions = 1.5
+distribute = 0.6.14
+dv.xdvserver = 1.0b8
+fanstatic = 0.10
+lxml = 2.3beta1
+setuptools = 0.6c11
+xdv = 0.4b3
+zc.buildout = 1.5.2
+zc.recipe.egg = 1.3.2
