--- a/deploy.ini
+++ b/deploy.ini
@@ -15,6 +15,7 @@ document_root = %(here)s/static
 [pipeline:default]
 pipeline = egg:Paste#cgitb
            egg:Paste#httpexceptions
+           fanstatic
            theme.default
            zope.proxy
 
@@ -31,3 +32,6 @@ live = true
 [app:zope.proxy]
 use = egg:Paste#proxy
 address = http://localhost:12080/VirtualHostBase/http/localhost:5000/mvr/VirtualHostRoot/
+
+[filter:fanstatic]
+use = egg:fanstatic#fanstatic
