--- a/deploy.ini
+++ b/deploy.ini
@@ -35,3 +35,7 @@ address = http://localhost:12080/VirtualHostBase/http/localhost:5000/mvr/Virtual
 
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
+# devmode = false
+# hashing = true
+# bottom = true
+# mode = minified
