--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,9 @@ versions = versions
 parts =
     pasteserver
 #    mywsgiapp
-develop = src/mauritsresources
+develop =
+    src/mauritsresources
+    src/paste_maurits
 
 
 [pasteserver]
@@ -13,6 +15,7 @@ eggs =
     PasteScript
     dv.xdvserver
     mauritsresources
+    paste_maurits
 
 
 [mywsgiapp]
@@ -37,3 +40,6 @@ setuptools = 0.6c11
 xdv = 0.4b3
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
+HTTPEncode = 0.1
+WSGIFilter = 0.2
+httplib2 = 0.6.0
