--- a/deploy.ini
+++ b/deploy.ini
@@ -12,10 +12,16 @@ use = egg:Paste#urlmap
 use = egg:Paste#static
 document_root = %(here)s/static
 
+[filter:tb]
+use = egg:Paste#cgitb
+display = true
+
 [pipeline:default]
-pipeline = egg:Paste#cgitb
+#pipeline = egg:Paste#cgitb
+pipeline = tb
            egg:Paste#httpexceptions
            fanstatic
+           resources
            theme.default
            zope.proxy
 
@@ -35,7 +41,13 @@ address = http://localhost:12080/VirtualHostBase/http/localhost:5000/mvr/Virtual
 
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
-# devmode = false
-# hashing = true
+base_url = http://localhost:5000
+# devmode = false  # Not allowed!
+# hashing = true  # Not allowed!
 # bottom = true
 # mode = minified
+recompute_hashes = true
+versioning = true
+
+[filter:resources]
+use = egg:paste_maurits#filter
