No longer use the separate paste_maurits package.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,6 @@ parts =
 #    mywsgiapp
 develop =
     src/mauritsresources
-    src/paste_maurits
 
 
 [pasteserver]
@@ -15,9 +14,9 @@ eggs =
     PasteScript
     dv.xdvserver
     mauritsresources
-    paste_maurits
 
 
+# Note: not currently used:
 [mywsgiapp]
 # This needs improvements from:
 # http://reinout.vanrees.org/weblog/2010/12/29/xdv-setup.html
