--- a/deploy.ini
+++ b/deploy.ini
@@ -21,7 +21,7 @@ display = true
 pipeline = tb
            egg:Paste#httpexceptions
            fanstatic
-           resources
+           egg:mauritsresources#filter
            theme.default
            zope.proxy
 
@@ -48,6 +48,3 @@ base_url = http://localhost:5000
 # mode = minified
 recompute_hashes = true
 versioning = true
-
-[filter:resources]
-use = egg:paste_maurits#filter
