deploy.ini cleanup

--- a/deploy.ini
+++ b/deploy.ini
@@ -17,15 +17,15 @@ use = egg:Paste#cgitb
 display = true
 
 [pipeline:default]
-#pipeline = egg:Paste#cgitb
-pipeline = tb
-           egg:Paste#httpexceptions
-           fanstatic
-           egg:mauritsresources#filter
-           theme.default
-           zope.proxy
+pipeline =
+    tb
+    egg:Paste#httpexceptions
+    fanstatic
+    egg:mauritsresources#filter
+    xdv
+    zope.proxy
 
-[filter:theme.default]
+[filter:xdv]
 use = egg:dv.xdvserver#xdv
 absolute_prefix = http://localhost:5000
 theme = %(here)s/theme/templates/plone.html
@@ -42,9 +42,7 @@ address = http://localhost:12080/VirtualHostBase/http/localhost:5000/mvr/Virtual
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
 base_url = http://localhost:5000
-# devmode = false  # Not allowed!
-# hashing = true  # Not allowed!
-# bottom = true
-# mode = minified
 recompute_hashes = true
 versioning = true
+# bottom = true
+# mode = minified
