Renamed zope.proxy to plone.

--- a/deploy.ini
+++ b/deploy.ini
@@ -23,7 +23,7 @@ pipeline =
     fanstatic
     egg:mauritsresources#filter
     xdv
-    zope.proxy
+    plone
 
 [filter:xdv]
 use = egg:dv.xdvserver#xdv
@@ -35,7 +35,7 @@ notheme =
 # Recompile on each request:
 live = true
 
-[app:zope.proxy]
+[app:plone]
 use = egg:Paste#proxy
 address = http://localhost:12080/VirtualHostBase/http/localhost:5000/mvr/VirtualHostRoot/
 
