--- a/deploy.ini
+++ b/deploy.ini
@@ -18,8 +18,8 @@ display = true
 
 [pipeline:default]
 pipeline =
-    tb
-    egg:Paste#httpexceptions
+#    tb
+#    egg:Paste#httpexceptions
     fanstatic
     egg:mauritsresources#filter
     xdv
@@ -27,11 +27,12 @@ pipeline =
 
 [filter:xdv]
 use = egg:dv.xdvserver#xdv
+# This may need to be maurits.vanrees.org:
 absolute_prefix = http://localhost:5000
 theme = %(here)s/theme/templates/plone.html
 rules = %(here)s/theme/rules/plone.xml
 # Recompile on each request:
-live = true
+#live = true
 
 [app:plone]
 use = egg:Paste#proxy
@@ -39,8 +40,9 @@ address = http://localhost:12080/VirtualHostBase/http/localhost:5000/mvr/Virtual
 
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
+# This may need to be maurits.vanrees.org:
 base_url = http://localhost:5000
-recompute_hashes = true
+recompute_hashes = false
 versioning = true
 # bottom = true
-# mode = minified
+minified = true
