Include the mauritsresources package directly in the buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,10 +2,8 @@
 [buildout]
 extensions = buildout_versions
 versions = versions
-parts =
-    pasteserver
-develop =
-    src/mauritsresources
+parts = pasteserver
+develop = .
 
 
 [pasteserver]
