--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,8 +22,8 @@ WebOb = 1.0.1
 buildout-versions = 1.5
 distribute = 0.6.14
 dv.xdvserver = 1.0b8
-fanstatic = 0.10
-lxml = 2.3beta1
+fanstatic = 0.10.1
+lxml = 2.3
 setuptools = 0.6c11
 xdv = 0.4b3
 zc.buildout = 1.5.2
