Make pipeline cleaner.

--- a/deploy.ini
+++ b/deploy.ini
@@ -16,12 +16,15 @@ document_root = %(here)s/static
 use = egg:Paste#cgitb
 display = true
 
+[filter:mauritsresources]
+use = egg:mauritsresources#filter
+
 [pipeline:default]
 pipeline =
 #    tb
 #    egg:Paste#httpexceptions
     fanstatic
-    egg:mauritsresources#filter
+    mauritsresources
     xdv
     plone
 
