--- a/deploy.ini
+++ b/deploy.ini
@@ -39,7 +39,9 @@ rules = %(here)s/theme/rules/plone.xml
 
 [app:plone]
 use = egg:Paste#proxy
-address = http://localhost:12080/VirtualHostBase/http/localhost:5000/mvr/VirtualHostRoot/
+# Use varnish as the backend.  We might want to put varnish in front
+# at some point actually, but not sure about that yet.
+address = http://localhost:12082/VirtualHostBase/http/localhost:5000/mvr/VirtualHostRoot/
 
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
