--- a/deploy.ini
+++ b/deploy.ini
@@ -30,8 +30,7 @@ pipeline =
 
 [filter:xdv]
 use = egg:dv.xdvserver#xdv
-# This may need to be maurits.vanrees.org:
-absolute_prefix = http://localhost:5000
+absolute_prefix = http://maurits.vanrees.org
 theme = %(here)s/theme/templates/plone.html
 rules = %(here)s/theme/rules/plone.xml
 # Recompile on each request:
@@ -41,12 +40,11 @@ rules = %(here)s/theme/rules/plone.xml
 use = egg:Paste#proxy
 # Use varnish as the backend.  We might want to put varnish in front
 # at some point actually, but not sure about that yet.
-address = http://localhost:12082/VirtualHostBase/http/localhost:5000/mvr/VirtualHostRoot/
+address = http://localhost:12082/VirtualHostBase/http/maurits.vanrees.org:80/mvr/VirtualHostRoot/
 
 [filter:fanstatic]
 use = egg:fanstatic#fanstatic
-# This may need to be maurits.vanrees.org:
-base_url = http://localhost:5000
+base_url = http://maurits.vanrees.org
 recompute_hashes = false
 versioning = true
 # bottom = true
