Add optional source for own fork of dv.xdvserver, as I have a fix there for HEAD requests.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,13 @@
 # Note: you need python2.6 for this.
 [buildout]
-extensions = buildout_versions
+extensions =
+    buildout_versions
+    mr.developer
 versions = versions
+sources = sources
 parts = pasteserver
 develop = .
+always-update = true
 
 
 [pasteserver]
@@ -14,6 +18,11 @@ eggs =
     mauritsresources
 
 
+[sources]
+#dv.xdvserver = hg ssh://hg@bitbucket.org/lrowe/dv.xdvserver
+dv.xdvserver = hg ssh://hg@bitbucket.org/maurits/dv.xdvserver
+
+
 [versions]
 HTTPEncode = 0.1
 Paste = 1.7.5.1
@@ -21,12 +30,14 @@ PasteDeploy = 1.5.0
 PasteScript = 1.7.3
 WSGIFilter = 0.2
 WebOb = 1.0.7
+argparse = 1.2.1
 buildout-versions = 1.6
 distribute = 0.6.19
 dv.xdvserver = 1.0b8
 fanstatic = 0.11.2
 httplib2 = 0.7.0
 lxml = 2.3
+mr.developer = 1.17
 setuptools = 0.6c11
 xdv = 0.4b3
 zc.buildout = 1.5.2
