--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ always-update = true
 recipe = zc.recipe.egg
 eggs =
     PasteScript
-    dv.xdvserver
+    diazo[wsgi]
     mauritsresources
 
 
@@ -32,13 +32,16 @@ WSGIFilter = 0.2
 WebOb = 1.0.7
 argparse = 1.2.1
 buildout-versions = 1.6
+diazo = 1.0rc2
 distribute = 0.6.19
 dv.xdvserver = 1.0b8
+experimental.cssselect = 0.1
 fanstatic = 0.11.2
 httplib2 = 0.7.0
 lxml = 2.3
 mr.developer = 1.17
 setuptools = 0.6c11
 xdv = 0.4b3
+repoze.xmliter = 0.3
 zc.buildout = 1.5.2
 zc.recipe.egg = 1.3.2
