--- a/devel.ini
+++ b/devel.ini
@@ -25,11 +25,11 @@ pipeline =
     egg:Paste#httpexceptions
     fanstatic
     mauritsresources
-    xdv
+    diazo
     plone
 
-[filter:xdv]
-use = egg:dv.xdvserver#xdv
+[filter:diazo]
+use = egg:diazo
 absolute_prefix = http://localhost:5000
 theme = %(here)s/theme/templates/plone.html
 rules = %(here)s/theme/rules/plone.xml
