add source for diazo

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,6 +21,7 @@ eggs =
 [sources]
 #dv.xdvserver = hg ssh://hg@bitbucket.org/lrowe/dv.xdvserver
 dv.xdvserver = hg ssh://hg@bitbucket.org/maurits/dv.xdvserver
+diazo = svn https://svn.plone.org/svn/plone/diazo/trunk
 
 
 [versions]
