Use diazo on deploy.ini as well.

--- a/deploy.ini
+++ b/deploy.ini
@@ -25,11 +25,11 @@ pipeline =
 #    egg:Paste#httpexceptions
     fanstatic
     mauritsresources
-    xdv
+    diazo
     plone
 
-[filter:xdv]
-use = egg:dv.xdvserver#xdv
+[filter:diazo]
+use = egg:diazo
 absolute_prefix = http://maurits.vanrees.org
 theme = %(here)s/theme/templates/plone.html
 rules = %(here)s/theme/rules/plone.xml
