--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,8 @@ eggs =
 [sources]
 #dv.xdvserver = hg ssh://hg@bitbucket.org/lrowe/dv.xdvserver
 dv.xdvserver = hg ssh://hg@bitbucket.org/maurits/dv.xdvserver
-diazo = svn https://svn.plone.org/svn/plone/diazo/trunk
+#diazo = svn https://svn.plone.org/svn/plone/diazo/trunk
+diazo = git https://github.com/plone/diazo
 
 
 [versions]
