Add src/mauritsresources(.egg-info) as fs type in the sources.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,9 @@ sources = sources
 parts = pasteserver
 develop = .
 always-update = true
+auto-checkout =
+    mauritsresources
+    mauritsresources.egg-info
 
 
 [pasteserver]
@@ -20,6 +23,10 @@ eggs =
 
 [sources]
 diazo = git https://github.com/plone/diazo
+# This is stored in the same git repository:
+mauritsresources = fs mauritsresources egg=false
+# Automatically generated; listed here so mr.developer has less to complain:
+mauritsresources.egg-info = fs mauritsresources.egg-info egg=false
 
 
 [versions]
