Use better urls for diazo checkout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,7 +22,7 @@ eggs =
 
 
 [sources]
-diazo = git https://github.com/plone/diazo
+diazo = git git://github.com/plone/diazo.git pushurl=git@github.com:plone/diazo.git
 # This is stored in the same git repository:
 mauritsresources = fs mauritsresources egg=false
 # Automatically generated; listed here so mr.developer has less to complain:
