Add source for mr.developer, as I see an error.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ eggs =
 
 [sources]
 diazo = git git://github.com/plone/diazo.git pushurl=git@github.com:plone/diazo.git
+mr.developer = git git://github.com/fschulze/mr.developer.git
 # This is stored in the same git repository:
 mauritsresources = fs mauritsresources egg=false
 # Automatically generated; listed here so mr.developer has less to complain:
