Try different diazo branch, though it does not help for the double content.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,7 +22,8 @@ eggs =
 
 
 [sources]
-diazo = git git://github.com/plone/diazo.git pushurl=git@github.com:plone/diazo.git
+#diazo = git git://github.com/plone/diazo.git pushurl=git@github.com:plone/diazo.git
+diazo = git git://github.com/lentinj/diazo.git branch=diazo-debugger
 mr.developer = git git://github.com/fschulze/mr.developer.git
 # This is stored in the same git repository:
 mauritsresources = fs mauritsresources egg=false
