--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,10 @@
-# Note: you need python2.6 for this.
+# Note: you need at least python 2.6 for this.
+# Using python 2.7 now.
 [buildout]
-extensions = buildout_versions
 versions = versions
 parts = pasteserver
 develop = .
+show-picked-versions = true
 
 
 [pasteserver]
@@ -19,7 +20,6 @@ Paste = 1.7.5.1
 PasteDeploy = 1.3.4
 PasteScript = 1.7.3
 WebOb = 1.0.1
-buildout-versions = 1.5
 distribute = 0.6.35
 dv.xdvserver = 1.0b8
 fanstatic = 0.10.1
