--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,10 +24,10 @@ distribute = 0.6.35
 dv.xdvserver = 1.0b8
 fanstatic = 0.10.1
 lxml = 2.3
-setuptools = 0.6c11
+setuptools = 21.0.0
 xdv = 0.4b3
-zc.buildout = 2.0.1
-zc.recipe.egg = 1.3.2
+zc.buildout = 2.5.1
+zc.recipe.egg = 2.0.3
 HTTPEncode = 0.1
 WSGIFilter = 0.2
 httplib2 = 0.8.0
